--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactcss": "^1.2.3"
+    "reactcss": "^1.2.3",
+    "roughjs": "^4.6.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
